--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for perl2port
 
+0.26    Wed 16 Dec 2009 15:34:27 MSK
+        fixed pkg-plist generation
 0.01    Date/time
         First version, released on an unsuspecting world.
 
